--- a/KittenKoders.html
+++ b/KittenKoders.html
@@ -5,7 +5,7 @@
     </head>
     <body>
     <body style="background-color:#E6E6FA"> </body>
-    <p style="font-size:50px"> Kittens for Sale </p>
+        <p style="font-size:50px"> <em> Kittens for Sale </em> </p>
         <img src = "https://s-media-cache-ak0.pinimg.com/originals/7a/2c/d1/7a2cd1020efb1f12c69afb2f1ecdf9f6.jpg" height="500" alt = "group of kittens" height="400">
             <!-- Rachel has coded the above -->
          <p> These lovely cats that I have bred are up for sale! Their breed is <a href="https://en.wikipedia.org/wiki/Norwegian_Forest_cat" target="_blank"> Norwegian Forest Cat. </a> They don't have any major health problems, other than a few minor kidney and heart issues.</p>
