--- a/KittenKoders.html
+++ b/KittenKoders.html
@@ -15,7 +15,7 @@
              <!-- Above was coded by Rachel! -->
         <img src="http://cdn3-www.cattime.com/assets/uploads/gallery/norwegian-forest-cats-and-kittens/norwegian-forest-cats-kittens-7.jpg"height= "300" alt="" >
         <!-- Diana has coded the above! -->
-        <p>For more information, contact notarealemail@gmail.com or (555)-555-5555</p>
+        <p> <strong> For more information, contact notarealemail@gmail.com or (555)-555-5555 </strong> </p>
         <img src="http://www.catgifpage.com/gifs/318.gif">
         <!-- Rachel has coded the above! -->
     </body>
