--- a/truths.html
+++ b/truths.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Rachel's Two Truths and a Lie</title>
+        <link rel = "stylesheet" type= "text/css" href = "truthstyle.css">
     </head>
     <body>
     <h1> Rachel's Two Truths and a Lie </h1>
