--- a/jokes.html
+++ b/jokes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" type='text/css" href= "jokestyle.css">
+    <link rel="stylesheet" type="text/css" href= "jokestyle.css">
         <title>jQuery Puns</title>
     </head>
     <body>
