--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Welcome to My World</title>
-    
+    <link rel="stylesheet" type="text/css" href= "index.css">
+        <title>My page</title>
     </head>
     <body>
     <div id = "wrapper">
