--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href= "https://rachelthomas04.github.io/rachelportfolio/hackone" target="_blank" alt="hack1">hackathon 1</a>&nbsp&nbsp&nbsp&nbsp</li>
             <li><a href= "https://rachelthomas04.github.io/rachelportfolio/beets" target="_blank" alt="hack2"> hackathon 2</a>&nbsp&nbsp&nbsp&nbsp</li>
             <li><a href= "https://rachelthomas04.github.io/rachelportfolio/jokes" target="_blank" alt="joke"> jokes</a>&nbsp&nbsp&nbsp&nbsp</li>
-            <li>quizzes</li>
+            <li><a href= "https://rachelthomas04.github.io/rachelportfolio/quiz" target="_blank" alt="quiz""quizzes</li>
            
         </ul>
           </div>  
