--- a/quiz.html
+++ b/quiz.html
@@ -34,5 +34,7 @@
 
     <button id = "submit"> Submit </button>
           <h2></h2>
+  <script type="text/javascript" src= "https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="quiz.js"></script>
     </body>
 </html>
