--- a/quiz.html
+++ b/quiz.html
@@ -32,7 +32,9 @@
     
  
 
-    <button id = "submit"> Submit </button>
+    <p><button id = "submit"> Submit </button> </p>
+   <img src= "https://media.giphy.com/media/JBtlM5zawNJo4/giphy.gif"> <br>
+   <img src= "https://media.giphy.com/media/NQXROIc9AgnRK/giphy.gif"> <br>
           <h2></h2>
   <script type="text/javascript" src= "https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script type="text/javascript" src="quiz.js"></script>
