--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>  
           <div id= "box1"></div>
           <div id = "box2"></div>
-          <h2> &nbsp  Hello & welcome to my page! Here's a complitation of all &nbspthe websites I have made at camp.&nbsp </h2>   
+          <h2> &nbsp  Hello & welcome to my page! Here's a complitation of all the websites I have made at camp.&nbsp </h2>   
       
           <div id = "box4"></div>
     </body>
