--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <h2> &nbsp  Hello & welcome to my page! Here's a complitation of all the websites I have made at camp.&nbsp </h2>   
       
           <div id = "box4"></div>
+        <div id = "box3"></div>
     </body>
     
 </html>
