--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           </div>  
           <div id= "box1"></div>
           <div id = "box2"></div>
-          <h2> &nbsp  Hello & welcome to my page! Here's a complitation of all the websites I have made at camp.&nbsp 
-        Enjoy the Totoro gifs :) </h2>   
+          <h2> &nbsp  Hello & welcome to my page! Here's a complitation of all the websites I have made at camp.</h2> 
+        <h3> Enjoy the Totoro gifs :) </h3>  
       
           <div id = "box4"></div>
         <div id = "box3"></div>
