--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
           </div>  
           <div id= "box1"></div>
           <div id = "box2"></div>
-          <h2> &nbsp  Hello & welcome to my page! Here's a complitation of all the websites I have made at camp.</h2> 
-        <h3> Enjoy the Totoro gifs :) </h3>  
+          <h2> &nbsp  Hello & welcome to my page! Here's a complitation of all the websites I have made at camp.
+        Enjoy the Totoro gifs :)</h2> 
+           
       
           <div id = "box4"></div>
         <div id = "box3"></div>
