--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       
           <div id = "box4"></div>
         <div id = "box3"></div>
+        <div id= "box5"></div>
     </body>
     
 </html>
