--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,7 @@
 <html>
     <head>
          <link rel="stylesheet" type="text/css" href= "quiz.css">
-        <title>Page Title</title>
+        <title>Which Hogwarts House Do You Belong In?</title>
     </head>
     <body>
     <h1> Which Hogwarts House Do You Belong In? </h1>
