--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <div id = "box4"></div>
         <div id = "box3"></div>
         <div id= "box5"></div>
+        <script type="text/javascript" src= "https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="title.js"></script>
     </body>
     
 </html>
