--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div id = "box3"></div>
         <div id= "box5"></div>
         </div>
+        
+        <script type="text/javascript" src= "https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script type="text/javascript" src="title.js"></script>
     </body>
     
 </html>
